--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
 <body>
 <div class="main-content">
 	<div class="row">
-		<section class="column-small-12 column-large-6 bg-left">
+		<section class="column-small-12 column-large-6 bg-left js-panel js-panel-left is-active">
 			<div class="row justify-content-end align-items-center">
 				<div class="column-small-12 column-large-8 fg-left">
-					<div class="bg-left blur">
-					</div>
+					<div class="bg-left blur"></div>
 					<div class="content-wrapper">
 						<div class="content-wrapper-inner">
 							<img src="images/SW_logo-yellow.svg" alt="Star Wars Logo" class="logo">
@@ -54,11 +53,17 @@
 				</div>
 			</div>
 		</section>
-		<section class="column-small-12 column-large-6 bg-right">
+		<section class="column-small-12 column-large-6 bg-right js-panel js-panel-right">
 			<div class="row justify-content-start align-items-center">
 				<div class="column-small-12 column-large-8 fg-right">
-					<div class="bg-right blur">
-
+					<div class="bg-right blur"></div>
+					<div class="content-wrapper">
+						<div class="close-icon">
+							<div class="toggle-icon">
+								<span class="bar"></span>
+								<span class="bar"></span>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
