--- a/index.html
+++ b/index.html
@@ -4,47 +4,36 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Star Wars API Responsive Website</title>
+<title>Star Wars App</title>
 
 <link rel="stylesheet" href="css/main.css">
 <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+<script defer src="js/index.js"></script>
 
 <!--Favicon-->
-<link rel="shortcut icon" type="image/png" href="images/favicon.png" />
+<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
 </head>
 <body>
+<h1 class="hidden">Star Wars Characters App</h1>
 <div class="main-content">
 	<div class="row">
-		<section class="column-small-12 column-large-6 bg-left js-panel js-panel-left is-active">
+		<div class="column-small-12 column-large-6 bg-left js-panel js-panel-left is-active">
 			<div class="row justify-content-end align-items-center">
-				<div class="column-small-12 column-large-8 fg-left">
+				<div class="column-small-12 column-large-10 column-xlarge-8 fg-left">
 					<div class="bg-left blur"></div>
 					<div class="content-wrapper">
 						<div class="content-wrapper-inner">
 							<img src="images/SW_logo-yellow.svg" alt="Star Wars Logo" class="logo">
 							<div class="character-list-wrapper">
 								<form class="search-wrapper">
-									<input type="text" name="str" id="search" class="search" placeholder="Search Character">
-									<label for="search" class="search-label"><span class="lnr lnr-magnifier"></span></label>
+									<label for="search" class="search-label"><span class="lnr lnr-magnifier"></span><span class="sr-only">Search Character</span></label>
+									<input type="text" name="str" id="search" class="search-input" placeholder="Search Character">
 								</form>
 								<div class="character-list">
-									<ul class="list">
-										<li class="list-item">Test</li>
-										<li class="list-item">Test</li>
-										<li class="list-item">Test</li>
-										<li class="list-item">Test</li>
-										<li class="list-item">Test</li>
-										<li class="list-item">Test</li>
-										<li class="list-item">Test</li>
-										<li class="list-item">Test</li>
-										<li class="list-item">Test</li>
-										<li class="list-item">Test</li>
-										<li class="list-item">Test</li>
-										<li class="list-item">Test</li>
-										<li class="list-item">Test</li>
-										<li class="list-item">Test</li>
+									<ul class="list js-search-result"></ul>
+									<ul class="list js-character-list">
 									</ul>
 								</div>
 							</div>
@@ -52,24 +41,35 @@
 					</div>
 				</div>
 			</div>
-		</section>
-		<section class="column-small-12 column-large-6 bg-right js-panel js-panel-right">
+		</div>
+		<div class="column-small-12 column-large-6 bg-right js-panel js-panel-right">
 			<div class="row justify-content-start align-items-center">
-				<div class="column-small-12 column-large-8 fg-right">
+				<div class="column-small-12 column-large-10 column-xlarge-8 fg-right">
 					<div class="bg-right blur"></div>
 					<div class="content-wrapper">
-						<div class="close-icon">
-							<div class="toggle-icon">
-								<span class="bar"></span>
-								<span class="bar"></span>
+						<div class="content-wrapper-inner">
+							<div class="close-icon" tabindex="0">
+								<div class="toggle-icon">
+									<span class="bar"></span>
+									<span class="bar"></span>
+								</div>
+							</div>
+							<div class="movie-info">
+								<div><h2 class="movie-title"></h2></div>
+								<div class="movie-episode"></div>
+								<div class="movie-image"></div>
+								<div class="movie-description"></div>
+								<div class="movie-director"></div>
+								<div class="movie-producer"></div>
+								<div class="movie-date"></div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 	</div>
 </div>
-<script src="js/main.js"></script>
+
 </body>
 </html>
